env: fixes localstack region

--- a/.env.local
+++ b/.env.local
@@ -3,4 +3,4 @@ LOG_LEVEL=DEBUG
 AWS_ENDPOINT=http://localhost:4566
 AWS_ACCESS_KEY_ID=foo
 AWS_SECRET_ACCESS_KEY=bar
-AWS_REGION=sa-east-1
+AWS_REGION=us-east-1
